--- a/style.css
+++ b/style.css
@@ -1,105 +1,160 @@
-.nav {
-    background-color: transparent;
-  }
-  .navbar-brand{
-    color: white;
-  }
-  .nav-link {
-    color:white;
-  }
-  .title
-  {
-    margin: auto;
-    display: table;
-    text-align:center;
-  }
-  html, body {
-    spacing: 0;
+* {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Lato';
+    -webkit-font-smoothing: antialiased;
+    -moz-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-rendering: optimizelegibility;
+}
+
+ul {
+    background-color: #000;
+    display: flex;
+    min-height: 100vh;
+    max-height: 100vh;
     margin: 0;
+    padding: 0;
+    overflow: hidden;
+    list-style-type: none;
+}
+
+li {
+    flex: 1;
+    display: flex;
+    align-items: stretch;
+    cursor: pointer;
+    transition: all .5s ease;
+} 
+li:hover {
+    background: darken(#000, 3);
+}
+
+li.active {
+    flex: 5;
+    cursor: default;
+    
+}
+    body, html {
+    margin: 0;
+    overflow: hidden;
+    -webkit-transition: opacity 400ms;
+    -moz-transition: opacity 400ms;
+    transition: opacity 400ms;
+}
+
+.blocks .col {
+    height: 100vh;
+}
+.onepage-pagination {
+    display: none;
+}
+
+body, .onepage-wrapper, html {
+    display: block;
+    position: static;
+    padding: 0;
     width: 100%;
     height: 100%;
-  }
-  .intro {
-    margin: auto;
+}
+.onepage-wrapper .section {
     width: 100%;
     height: 100%;
-    background: url(https://i.imgur.com/I9bc2PF.jpg);
-    background-size: cover;
-    background-attachment:fixed;
-    display: table;
-    top: 0;
-  }
-  .intro .inner {
-    display: table-cell;
-    vertical-align: middle;
-    padding-above: 20%;
-    text-align: center;
-  }
-  .content h1 {
-    font-family: 'Open Sans', sans-serif;
-    color: #f9f3f4;
-    font-size: 550%;
-    text-shadow: 3px 3px #098fa8;
-  }
-  .btn {
-    font-size: 150%;
-    font-family: 'Poppins', sans-serif;
-    text-decoration: none;
-    color: #098FA8;
-    border: 2px solid #098FA8;
-    padding: 10px 20px;
-    border-radius: 5px;
-  }
-  .btn:hover {
-    color: #156377;
-    border: 2px solid #156377;
-  }
-  p {
-    text-indent: 5%;
-    font-family: sans-serif;
-    font-size: 120%;
-    line-height: 190%;
-    text-align: justify;
-    margin: 3%;
-  }
-  
-  
-  
-  @media (max-width: 768px) {
-    .content h1 {
-      font-size: 300%;
-    }
-    .btn {
-      font-size: 110%;
-      padding: 7px 15px;
-    }
-    p {
-      text-indent:10%;
-      font-size: 100%;
-      line-height: 160%;
-    }
-  }
-  
-  .skills {
-    background-color: hsl(100, 50%, 100%);
-    text-align:center;
-  }
-  .s {
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 250px;
-  }
-  .ss {
-    padding-left:20px;
-    padding-right:20px;
-  }
-  
-  
-  
-  .card-title {
-    text-align:center;
-  }
-  
-  .nav-colored { background-color:#000; }
-  .nav-transparent { background-color:transparent;}
-  
+}
+
+.menu {
+    position: absolute;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #fff;
+    height: 10vh;
+    width:60vw;
+    background: linear-gradient(to right, #222221 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    transition: all .5s ease;
+}
+.menu-bcg {
+    background-position: left bottom;
+    color: #fff;
+}
+.menu h4 {
+    text-decoration-color: #fff;
+    display: inline-block;
+    font-size: 1.3em;
+    text-transform: uppercase;
+    line-height: 1.5;
+    transition: all .5s ease;
+
+}
+.menu h4:hover {
+    text-decoration: underline;
+    text-decoration-color: #e6b13f;
+    text-decoration-style: dashed;
+}
+h1 {
+    font-size: 7em;
+    font-weight: 700;
+    font-family: 'Reenie Beanie', cursive;
+
+}
+article {
+    display: flex;
+    padding: 10vh;
+    align-items: center;
+}
+.min {
+    font-size: .4em;
+    transition: all .25s .1s ease;
+    transform: rotate(-90deg);
+    white-space: nowrap;
+}
+
+.max {
+    transition: all .25s .1s ease;
+}
+
+#color-bcg {
+    background: #fff;
+}
+
+#content-2 {
+    display: flex;
+    align-content: flex-end;
+    padding: 10px;
+}
+#content-2 h2 {
+    color: #fff;
+    align-self: flex-end;
+}
+#content-2, #content-3 {
+   /* background-color: #222221;*/
+   background-color: #000;
+    color: #fff;
+}
+#content-4 {
+    background-color: #fff;
+    color: #000;
+}
+
+#content-2 p {
+    padding: 10px;
+    align-self: center;
+    font-size: 1.3em;
+}
+#content-3 img {
+    margin: 0 auto;
+    align-self: center;
+    width: 400px;
+    height: 400px;
+}
+
+#content-4 p {
+    padding: 60px;
+    margin: 0 auto;
+    align-self: center;
+    font-size: 1.5em;
+}
